Archive2/f9/939355bbab4393/output
main.cpp:2:1: error: stray '\357' in program
 int main（）
 ^
main.cpp:2:1: error: stray '\274' in program
main.cpp:2:1: error: stray '\210' in program
main.cpp:2:1: error: stray '\357' in program
main.cpp:2:1: error: stray '\274' in program
main.cpp:2:1: error: stray '\211' in program
main.cpp:3:1: error: stray '\357' in program
 ｛
 ^
main.cpp:3:1: error: stray '\275' in program
main.cpp:3:1: error: stray '\233' in program
main.cpp:4:1: error: stray '\343' in program
 std::cout《"你是个2b"；
 ^
main.cpp:4:1: error: stray '\200' in program
main.cpp:4:1: error: stray '\212' in program
main.cpp:4:1: error: stray '\357' in program
main.cpp:4:1: error: stray '\274' in program
main.cpp:4:1: error: stray '\233' in program
main.cpp:5:1: error: stray '\357' in program
 return 0；
 ^
main.cpp:5:1: error: stray '\274' in program
main.cpp:5:1: error: stray '\233' in program
main.cpp:6:1: error: stray '\357' in program
 ｝
 ^
main.cpp:6:1: error: stray '\275' in program
main.cpp:6:1: error: stray '\235' in program
main.cpp:4:1: error: expected initializer before 'std'
 std::cout《"你是个2b"；
 ^
