Archive2/f9/939355bbab4393/main.cpp
#include <iostream>
int main（）
｛
std::cout《"你是个2b"；
return 0；
｝